--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <link rel="icon" type="image/png" href="images/bateria.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
-
+<script src="main.js"></script>
 </head>
 <body>
 
     <h1>Alura Midi</h1>
-
     <section class="teclado">
         <button class="tecla tecla_pom">Pom</button>
         <button class="tecla tecla_clap">Clap</button>
@@ -33,6 +32,8 @@
         <button class="tecla tecla_tic">Tic</button>
         <button class="tecla tecla_tom">Tom</button>
     </section>
+
+   
 
     <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
     <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
